--- a/apps.html
+++ b/apps.html
@@ -4,44 +4,73 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
+  <!-- Primary SEO -->
   <title>Project Management SaaS Apps & AI Prompts | System & Flow</title>
   <meta name="description" content="Lightweight SaaS apps and AI prompts — built by project managers, for project managers. Save hours, cut through noise, and focus on execution." />
   <link rel="canonical" href="https://systemnflow.com/apps.html" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
-  <!-- Social -->
+  <!-- Open Graph / Social -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Project Management SaaS Apps & AI Prompts | System & Flow" />
   <meta property="og:description" content="SaaS apps and AI prompts designed by project managers, for project managers. Faster, smarter execution without the chaos." />
   <meta property="og:url" content="https://systemnflow.com/apps.html" />
   <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
   <meta property="og:site_name" content="System & Flow" />
+
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Project Management SaaS Apps & AI Prompts | System & Flow" />
   <meta name="twitter:description" content="SaaS apps and AI prompts designed by project managers, for project managers. Faster, smarter execution without the chaos." />
   <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
+  <!-- Favicons & PWA -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
+  <link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#0b1220">
+  <link rel="manifest" href="/assets/img/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#0b1220">
+  <meta name="msapplication-config" content="/assets/img/browserconfig.xml">
+
   <!-- CSS -->
   <link rel="preload" href="/styles.css" as="style" />
   <link rel="stylesheet" href="/styles.css" />
 
-<!-- Favicons & Touch Icons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-<link rel="manifest" href="/assets/img/site.webmanifest">
-<link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#0b1220">
-<link rel="shortcut icon" href="/assets/img/favicon.ico">
-<meta name="msapplication-TileColor" content="#0b1220">
-<meta name="msapplication-config" content="/assets/img/browserconfig.xml">
-<meta name="theme-color" content="#0b1220">
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Project Management SaaS Apps & AI Prompts | System & Flow",
+    "url": "https://systemnflow.com/apps.html",
+    "about": {
+      "@type": "Thing",
+      "name": "Project management SaaS apps and AI prompt packs"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "System & Flow",
+      "url": "https://systemnflow.com/"
+    }
+  }
+  </script>
 
-  <!-- GA -->
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
-  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-1FRFWG4X18');</script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-1FRFWG4X18');
+  </script>
 </head>
 <body class="dark">
+  <!-- a11y: Skip link -->
+  <a href="#main" class="skip-link">Skip to content</a>
+
+  <!-- Header / Navbar -->
   <header class="wrap header">
     <div class="brand">
       <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
@@ -56,62 +85,67 @@
     </nav>
   </header>
 
-  <main class="wrap hero" style="padding:60px 20px 14px">
+  <!-- Page intro -->
+  <main id="main" class="wrap hero" style="padding:60px 20px 14px">
     <h1>SaaS Apps &amp; AI Prompts</h1>
     <p class="sub">Built by project managers, for project managers. Start with the free Analyzer, then explore premium apps and prompt packs.</p>
   </main>
 
+  <!-- App cards -->
   <section class="wrap grid">
-    <!-- Transcript Analyzer -->
+
+    <!-- Transcript Analyzer (Live) -->
     <div class="card">
       <div class="card-top">
         <h3 style="margin:0">Transcript Analyzer (Free)</h3>
-        <span class="badge live"><span class="dot"></span> Live</span>
+        <span class="badge live" aria-label="Live"><span class="dot" aria-hidden="true"></span> Live</span>
       </div>
       <p>Turn raw meeting notes into <strong>Actions, Risks, and Decisions</strong> in seconds.</p>
       <div class="card-actions">
-        <a class="btn primary" href="#" rel="nofollow">Open</a>
-        <a class="btn ghost" href="#" rel="nofollow">Docs</a>
+        <a class="btn primary" href="#" rel="nofollow" aria-label="Open Transcript Analyzer">Open</a>
+        <a class="btn ghost" href="#" rel="nofollow" aria-label="Read documentation for Transcript Analyzer">Docs</a>
       </div>
     </div>
 
-    <!-- Status Report Generator -->
+    <!-- Status Report Generator (Coming Soon) -->
     <div class="card">
       <div class="card-top">
         <h3 style="margin:0">Status Report Generator</h3>
-        <span class="badge soon"><span class="dot"></span> Coming&nbsp;Soon</span>
+        <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span> Coming&nbsp;Soon</span>
       </div>
-      <p>Create <strong>exec‑ready one‑pagers</strong> with instant export to PDF or Markdown.</p>
+      <p>Create <strong>exec-ready one-pagers</strong> with instant export to PDF or Markdown.</p>
       <div class="card-actions">
-        <a class="btn ghost" href="/contact.html">Get Notified</a>
+        <a class="btn ghost" href="/contact.html" aria-label="Get notified about Status Report Generator">Get Notified</a>
       </div>
     </div>
 
-    <!-- Risk Radar -->
+    <!-- Risk Radar (Coming Soon) -->
     <div class="card">
       <div class="card-top">
         <h3 style="margin:0">Risk Radar</h3>
-        <span class="badge soon"><span class="dot"></span> Coming&nbsp;Soon</span>
+        <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span> Coming&nbsp;Soon</span>
       </div>
-      <p>Automatically flag top project risks — complete with <strong>AI‑suggested mitigations</strong>.</p>
+      <p>Automatically flag top project risks — complete with <strong>AI-suggested mitigations</strong>.</p>
       <div class="card-actions">
-        <a class="btn ghost" href="/contact.html">Get Notified</a>
+        <a class="btn ghost" href="/contact.html" aria-label="Get notified about Risk Radar">Get Notified</a>
       </div>
     </div>
 
-    <!-- AI Prompt Pack -->
+    <!-- AI Prompt Pack (Coming Soon) -->
     <div class="card">
       <div class="card-top">
         <h3 style="margin:0">AI Prompt Pack for PMs</h3>
-        <span class="badge soon"><span class="dot"></span> Coming&nbsp;Soon</span>
+        <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span> Coming&nbsp;Soon</span>
       </div>
       <p>50+ prompts crafted by PMs to supercharge <strong>planning, reporting, and team alignment</strong>.</p>
       <div class="card-actions">
-        <a class="btn ghost" href="/contact.html">Get Notified</a>
+        <a class="btn ghost" href="/contact.html" aria-label="Get notified about AI Prompt Pack">Get Notified</a>
       </div>
     </div>
+
   </section>
 
+  <!-- Footer -->
   <div data-include="/partials/footer.html"></div>
   <script src="/include.js" defer></script>
 </body>
