--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta name="twitter:description" content="Lightweight SaaS apps and AI prompts for PMs. Faster, smarter execution without the chaos." />
   <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
-  <!-- JSON‑LD (Organization) -->
+  <!-- JSON-LD (Organization) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -41,26 +41,22 @@
   }
   </script>
 
-    <!-- Performance hints -->
+  <!-- Performance hints -->
   <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="/styles.css" as="style" />
 
-  <!-- Styles, PWA & Favicon -->
+  <!-- Styles, PWA & Favicons -->
   <link rel="stylesheet" href="/styles.css" />
   <link rel="manifest" href="/assets/img/site.webmanifest">
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/assets/img/favicon.ico" />
 
   <!-- Favicons & Touch Icons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-<link rel="manifest" href="/assets/img/site.webmanifest">
-<link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#0b1220">
-<link rel="shortcut icon" href="/assets/img/favicon.ico">
-<meta name="msapplication-TileColor" content="#0b1220">
-<meta name="msapplication-config" content="/assets/img/browserconfig.xml">
-<meta name="theme-color" content="#0b1220">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#0b1220">
+  <meta name="msapplication-TileColor" content="#0b1220">
+  <meta name="msapplication-config" content="/assets/img/browserconfig.xml">
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
@@ -73,7 +69,7 @@
 </head>
 <body class="dark">
 
-   <!-- a11y: Skip link -->
+  <!-- a11y: Skip link -->
   <a href="#main" class="skip-link">Skip to content</a>
 
   <!-- Header / Navbar -->
@@ -92,7 +88,7 @@
   </header>
 
   <!-- Hero -->
-  <main class="wrap hero">
+  <main id="main" class="wrap hero">
     <img src="/assets/img/SNF_logo.png" alt="System & Flow full logo" class="logo-hero" width="300" height="300" loading="eager" decoding="async" />
     <h1>Project Management.<br/>Simplified.</h1>
     <p class="sub">
@@ -100,7 +96,7 @@
       lightweight SaaS apps and AI prompts that cut through chaos and make execution simple.
     </p>
 
-     <div class="cta-row" role="group" aria-label="Primary actions" style="gap:12px;display:flex;flex-wrap:wrap;justify-content:center;">
+    <div class="cta-row" role="group" aria-label="Primary actions" style="gap:12px;display:flex;flex-wrap:wrap;justify-content:center;">
       <a class="btn primary" href="/apps.html" aria-label="Explore apps and AI prompts">Explore Tools</a>
       <a class="btn ghost" href="/contact.html" aria-label="Join the email list for launch updates">Join the List</a>
     </div>
@@ -124,7 +120,6 @@
         <input type="hidden" name="_subject" value="Newsletter signup — systemnflow.com" />
       </form>
 
-      <!-- Success message -->
       <div id="newsletter-success" class="success"
            style="display:none;text-align:center;margin-top:15px;padding:12px;background:#0f1f14;border:1px solid #1f5d38;color:#c9f1dc;border-radius:10px;">
         ✅ Thanks for joining! Check your inbox soon.
@@ -157,7 +152,7 @@
           <span class="dot" aria-hidden="true"></span> Coming&nbsp;Soon
         </span>
       </div>
-      <p>Create <strong>exec‑ready one‑pagers</strong> with instant export to PDF or Markdown.</p>
+      <p>Create <strong>exec-ready one-pagers</strong> with instant export to PDF or Markdown.</p>
       <div class="card-actions">
         <a class="btn ghost" href="/apps.html" aria-label="Get notified about Status Report Generator">Get Notified</a>
       </div>
@@ -171,7 +166,7 @@
           <span class="dot" aria-hidden="true"></span> Coming&nbsp;Soon
         </span>
       </div>
-      <p>Automatically flag top project risks — with <strong>AI‑suggested mitigations</strong>.</p>
+      <p>Automatically flag top project risks — with <strong>AI-suggested mitigations</strong>.</p>
       <div class="card-actions">
         <a class="btn ghost" href="/apps.html" aria-label="Get notified about Risk Radar">Get Notified</a>
       </div>
