--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Page Not Found | System & Flow</title>
   <meta name="description" content="Oops — the page you wanted doesn’t exist. Ronnie probably unplugged something. Explore System & Flow for PM tools that actually work." />
@@ -10,66 +10,111 @@
   <meta name="robots" content="noindex,follow" />
   <meta name="theme-color" content="#0b1220" />
 
-  <!-- Social -->
+  <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Page Not Found | System & Flow" />
   <meta property="og:description" content="Oops — the page you wanted doesn’t exist. Ronnie probably unplugged something. Explore System & Flow for PM tools that actually work." />
   <meta property="og:url" content="https://systemnflow.com/404.html" />
   <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
-  <meta property="og:site_name" content="System & Flow" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Page Not Found | System & Flow" />
   <meta name="twitter:description" content="Oops — the page you wanted doesn’t exist. Ronnie probably unplugged something. Explore System & Flow for PM tools that actually work." />
   <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
-  <link rel="preload" href="/styles.css" as="style" />
-  <link rel="stylesheet" href="/styles.css" />
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="manifest" href="/assets/img/site.webmanifest">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
- <!-- Favicons & Touch Icons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-<link rel="manifest" href="/assets/img/site.webmanifest">
-<link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#0b1220">
-<link rel="shortcut icon" href="/assets/img/favicon.ico">
-<meta name="msapplication-TileColor" content="#0b1220">
-<meta name="msapplication-config" content="/assets/img/browserconfig.xml">
-<meta name="theme-color" content="#0b1220">
+  <!-- CSS -->
+  <link rel="preload" href="/assets/css/main.css" as="style" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
 
   <style>
-    .rfr-hero{display:flex;flex-direction:column;align-items:center;gap:18px;text-align:center;padding:40px 20px 8px}
-    .rfr-hero img{width:300px;max-width:80vw;border-radius:18px;border:1px solid var(--border);box-shadow:0 10px 30px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.02)}
-    .rfr-hero h1{font-size:clamp(22px,3.2vw,34px);margin:8px 0 4px;line-height:1.25}
+    /* 404-specific tweaks (kept tiny; rest comes from main.css) */
+    .rfr-hero{display:flex;flex-direction:column;align-items:center;gap:18px;text-align:center;padding:56px 20px 8px}
+    .rfr-hero img{width:320px;max-width:80vw;border-radius:18px;border:1px solid var(--border);box-shadow:0 10px 30px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.02)}
+    .rfr-hero h1{font-size:clamp(22px,3.2vw,34px);margin:12px 0 4px;line-height:1.25}
     .rfr-hero p.subtle{color:var(--muted);max-width:720px;margin:0 auto;font-size:15px}
     .rfr-actions{display:flex;gap:12px;justify-content:center;margin-top:16px;flex-wrap:wrap}
   </style>
 </head>
-<body class="dark">
-  <header class="wrap header">
-    <div class="brand">
-      <a href="/" style="display:flex;align-items:center;gap:10px;text-decoration:none">
-        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" width="28" height="28" />
-        <span class="brand-name">System &amp; Flow</span>
-      </a>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header">
+    <div class="container">
+      <a class="brand" href="/"><img src="/assets/img/logo.png" alt="System & Flow logo" /></a>
+      <nav aria-label="Primary">
+        <button class="nav-toggle" aria-expanded="false" aria-controls="nav">Menu</button>
+        <ul id="nav" class="nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Apps</a></li>
+          <li><a href="/contact.html" class="button">Contact</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="nav">
-      <a href="/">Home</a>
-      <a href="/apps.html">Apps</a>
-      <a href="/contact.html">Contact</a>
-    </nav>
   </header>
 
-  <main class="wrap rfr-hero">
-    <img src="/assets/img/rfr-unplug.png" alt="Ronnie accidentally unplugged the site" width="300" height="240" loading="lazy" decoding="async" />
-    <h1>Red‑Flag Ronnie got here first.</h1>
-    <p class="subtle">The page you’re looking for doesn’t exist (or Ronnie unplugged something he shouldn’t). You’re still in the right place for PM tools that feel simple.</p>
-    <div class="rfr-actions">
-      <a href="/" class="btn">Back to Home</a>
-      <a href="/apps.html" class="btn ghost">Explore Tools</a>
-    </div>
+  <main id="main">
+    <section class="rfr-hero">
+      <img src="/assets/img/rfr-unplug.png" width="320" height="256" loading="lazy" decoding="async" alt="Ronnie accidentally unplugged the site" />
+      <h1>Red-Flag Ronnie got here first.</h1>
+      <p class="subtle">
+        The page you’re looking for doesn’t exist (or Ronnie unplugged something he shouldn’t).
+        You’re still in the right place for PM tools that feel simple.
+      </p>
+      <div class="rfr-actions">
+        <a href="/" class="button primary">Back to Home</a>
+        <a href="/apps.html" class="button ghost">Explore Tools</a>
+      </div>
+    </section>
   </main>
 
-  <div data-include="/partials/footer.html"></div>
-  <script src="/include.js" defer></script>
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <img class="footer-logo" src="/assets/img/logo.png" alt="System & Flow" />
+        <p class="small">Project management toolkits & AI prompts.</p>
+      </div>
+      <nav aria-label="Footer">
+        <ul class="footer-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Apps</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="https://systemnflow.gumroad.com">Store</a></li>
+        </ul>
+      </nav>
+      <div class="social">
+        <a href="https://www.instagram.com/systemnflow" aria-label="Instagram">@systemnflow</a>
+        <a href="https://www.tiktok.com/@systemnflow" aria-label="TikTok">@systemnflow</a>
+        <a href="https://www.pinterest.com/systemnflow" aria-label="Pinterest">Pinterest</a>
+        <a href="https://www.youtube.com/@Systemnflow" aria-label="YouTube">YouTube</a>
+        <a href="https://www.linkedin.com/company/system-and-flow" aria-label="LinkedIn">LinkedIn</a>
+      </div>
+    </div>
+    <div class="container legal small">
+      © <span id="y"></span> System & Flow™. All rights reserved.
+    </div>
+  </footer>
+
+  <script>
+    // year
+    document.getElementById('y').textContent = new Date().getFullYear();
+
+    // mobile nav
+    const btn = document.querySelector('.nav-toggle');
+    const nav = document.getElementById('nav');
+    if (btn && nav) {
+      btn.addEventListener('click', () => {
+        const open = btn.getAttribute('aria-expanded') === 'true';
+        btn.setAttribute('aria-expanded', String(!open));
+        nav.classList.toggle('open');
+      });
+    }
+  </script>
 </body>
 </html>
