--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>About — System & Flow</title>
   <meta name="description" content="Built by project managers, for project managers. Why System & Flow exists and what we’re building next." />
@@ -10,90 +10,174 @@
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
-  <!-- Social -->
+  <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="About — System & Flow" />
   <meta property="og:description" content="Built by project managers, for project managers." />
   <meta property="og:url" content="https://systemnflow.com/about.html" />
   <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
-  <meta property="og:site_name" content="System & Flow" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="About — System & Flow" />
   <meta name="twitter:description" content="Built by project managers, for project managers." />
   <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
-  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
-  <link rel="preload" href="/styles.css" as="style" />
-  <link rel="stylesheet" href="/styles.css" />
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="manifest" href="/assets/img/site.webmanifest">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
-  <!-- Favicons & Touch Icons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-<link rel="manifest" href="/assets/img/site.webmanifest">
-<link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#0b1220">
-<link rel="shortcut icon" href="/assets/img/favicon.ico">
-<meta name="msapplication-TileColor" content="#0b1220">
-<meta name="msapplication-config" content="/assets/img/browserconfig.xml">
-<meta name="theme-color" content="#0b1220">
+  <!-- CSS -->
+  <link rel="preload" href="/assets/css/main.css" as="style" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
+
   <!-- GA -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
-  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)};gtag('js',new Date());gtag('config','G-1FRFWG4X18');</script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-1FRFWG4X18');
+  </script>
+
+  <style>
+    /* Page-specific light touches */
+    .about-wrap{max-width:820px}
+    .newsletter-form{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
+    .newsletter-form input[type="email"]{flex:1;min-width:240px;padding:12px;border-radius:12px;border:1px solid var(--border);background:var(--card);color:var(--ink)}
+    .newsletter-form .actions{display:flex;align-items:center}
+    #about-wait-ok{display:none;margin-top:10px}
+  </style>
 </head>
-<body class="dark">
-  <header class="wrap header">
-    <div class="brand">
-      <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-       <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" width="28" height="28" />
-        <span class="brand-name">System &amp; Flow</span>
-      </a>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header">
+    <div class="container">
+      <a class="brand" href="/"><img src="/assets/img/logo.png" alt="System & Flow logo" /></a>
+      <nav aria-label="Primary">
+        <button class="nav-toggle" aria-expanded="false" aria-controls="nav">Menu</button>
+        <ul id="nav" class="nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Apps</a></li>
+          <li><a href="/about.html" aria-current="page">About</a></li>
+          <li><a href="/contact.html" class="button">Contact</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="nav">
-      <a href="/">Home</a>
-      <a href="/apps.html">Apps</a>
-      <a href="/about.html" aria-current="page">About</a>
-      <a href="/contact.html">Contact</a>
-    </nav>
   </header>
 
-  <main class="wrap hero" style="padding:60px 20px 14px">
-    <h1>Built by PMs, for PMs</h1>
-    <p class="sub">We’re project managers who wanted fewer clicks, clearer status, and tools that don’t fight you.</p>
+  <main id="main">
+    <!-- Hero -->
+    <section class="hero">
+      <div class="container">
+        <h1>Built by PMs, for PMs</h1>
+        <p class="small" style="max-width:720px">
+          We’re project managers who wanted fewer clicks, clearer status, and tools that don’t fight you.
+        </p>
+      </div>
+    </section>
+
+    <!-- Body -->
+    <section class="section">
+      <div class="container about-wrap">
+        <h2 style="margin-top:0">Why System &amp; Flow</h2>
+        <p>
+          Most PM tools are heavy. We prefer fast, focused apps that do one job beautifully—turn a messy meeting into decisions,
+          ship a clean status report, or surface the real risks before they explode.
+        </p>
+
+        <h2>What we’re building</h2>
+        <ul class="small" style="line-height:1.8">
+          <li><strong>Transcript Analyzer (Free):</strong> actions, risks, and decisions in seconds.</li>
+          <li><strong>Status Report Generator (Pro):</strong> exec-ready one-pagers.</li>
+          <li><strong>Risk Radar (Suite):</strong> proactive risk visibility with mitigations.</li>
+          <li><strong>AI Prompt Pack for PMs:</strong> planning, reporting, and alignment shortcuts.</li>
+        </ul>
+
+        <h2>Stay in the loop</h2>
+        <form id="about-wait" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form" novalidate>
+          <label class="sr-only" for="about-email">Email</label>
+          <input id="about-email" type="email" name="email" required placeholder="Email for early access & updates" />
+          <input type="hidden" name="_subject" value="About page signup — systemnflow.com" />
+          <div class="actions">
+            <button class="button primary" type="submit">Join</button>
+          </div>
+        </form>
+        <div id="about-wait-ok" class="small" role="status" aria-live="polite">✅ You’re on the list.</div>
+        <p class="small" style="margin-top:8px;color:var(--muted)">
+          We’ll email occasionally with launch updates and early access invites. Unsubscribe anytime.
+        </p>
+      </div>
+    </section>
   </main>
 
-  <section class="wrap" style="max-width:820px;padding:10px 20px 50px">
-    <h2 style="margin-top:0">Why System &amp; Flow</h2>
-    <p>Most PM tools are heavy. We prefer fast, focused apps that do one job beautifully—turn a messy meeting into decisions, ship a clean status report, or surface the real risks before they explode.</p>
-
-    <h2>What we’re building</h2>
-    <ul style="color:var(--muted);line-height:1.7">
-      <li><strong>Transcript Analyzer (Free):</strong> actions, risks, and decisions in seconds.</li>
-      <li><strong>Status Report Generator (Pro):</strong> exec-ready one-pagers.</li>
-      <li><strong>Risk Radar (Suite):</strong> proactive risk visibility with mitigations.</li>
-      <li><strong>AI Prompt Pack for PMs:</strong> planning, reporting, and alignment shortcuts.</li>
-    </ul>
-
-    <h2>Stay in the loop</h2>
-    <form id="about-wait" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form" style="max-width:560px">
-      <input type="email" name="email" required placeholder="Email for early access & updates" />
-      <input type="hidden" name="_subject" value="About page signup — systemnflow.com" />
-      <div class="actions">
-        <button class="btn primary" type="submit">Join</button>
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <img class="footer-logo" src="/assets/img/logo.png" alt="System & Flow" />
+        <p class="small">Project management toolkits & AI prompts.</p>
       </div>
-    </form>
-    <div id="about-wait-ok" class="success">✅ You’re on the list.</div>
-  </section>
+      <nav aria-label="Footer">
+        <ul class="footer-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Apps</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="https://systemnflow.gumroad.com">Store</a></li>
+        </ul>
+      </nav>
+      <div class="social">
+        <a href="https://www.instagram.com/systemnflow" aria-label="Instagram">@systemnflow</a>
+        <a href="https://www.tiktok.com/@systemnflow" aria-label="TikTok">@systemnflow</a>
+        <a href="https://www.pinterest.com/systemnflow" aria-label="Pinterest">Pinterest</a>
+        <a href="https://www.youtube.com/@Systemnflow" aria-label="YouTube">YouTube</a>
+        <a href="https://www.linkedin.com/company/system-and-flow" aria-label="LinkedIn">LinkedIn</a>
+      </div>
+    </div>
+    <div class="container legal small">
+      © <span id="y"></span> System & Flow™. All rights reserved.
+    </div>
+  </footer>
 
-  <div data-include="/partials/footer.html"></div>
-  <script src="/include.js" defer></script>
   <script>
-    const f=document.getElementById('about-wait'), ok=document.getElementById('about-wait-ok');
-    if(f){f.addEventListener('submit', async e=>{
-      e.preventDefault();
-      const r=await fetch(f.action,{method:'POST',body:new FormData(f),headers:{'Accept':'application/json'}});
-      if(r.ok){f.style.display='none'; ok.style.display='block'; if(window.gtag) gtag('event','newsletter_signup',{source:'about'});}
-      else alert('Please try again.');
-    });}
+    // year
+    document.getElementById('y').textContent = new Date().getFullYear();
+
+    // mobile nav
+    const btn = document.querySelector('.nav-toggle');
+    const nav = document.getElementById('nav');
+    if (btn && nav) {
+      btn.addEventListener('click', () => {
+        const open = btn.getAttribute('aria-expanded') === 'true';
+        btn.setAttribute('aria-expanded', String(!open));
+        nav.classList.toggle('open');
+      });
+    }
+
+    // newsletter ajax
+    const form = document.getElementById('about-wait');
+    const ok = document.getElementById('about-wait-ok');
+    if (form) {
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const r = await fetch(form.action, {
+          method: 'POST',
+          body: new FormData(form),
+          headers: { 'Accept': 'application/json' }
+        });
+        if (r.ok) {
+          form.style.display = 'none';
+          ok.style.display = 'block';
+          if (window.gtag) gtag('event', 'newsletter_signup', { source: 'about' });
+        } else {
+          alert('Please try again.');
+        }
+      });
+    }
   </script>
 </body>
 </html>
