--- a/apps.html
+++ b/apps.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Primary SEO -->
   <title>Project Management SaaS Apps & AI Prompts | System & Flow</title>
@@ -17,47 +17,36 @@
   <meta property="og:description" content="SaaS apps and AI prompts designed by project managers, for project managers. Faster, smarter execution without the chaos." />
   <meta property="og:url" content="https://systemnflow.com/apps.html" />
   <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
-  <meta property="og:site_name" content="System & Flow" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Project Management SaaS Apps & AI Prompts | System & Flow" />
   <meta name="twitter:description" content="SaaS apps and AI prompts designed by project managers, for project managers. Faster, smarter execution without the chaos." />
   <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
-  <!-- Favicons & PWA -->
+  <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-  <link rel="shortcut icon" href="/assets/img/favicon.ico">
-  <link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#0b1220">
   <link rel="manifest" href="/assets/img/site.webmanifest">
-  <meta name="msapplication-TileColor" content="#0b1220">
-  <meta name="msapplication-config" content="/assets/img/browserconfig.xml">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
   <!-- CSS -->
-  <link rel="preload" href="/styles.css" as="style" />
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="preload" href="/assets/css/main.css" as="style" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
 
   <!-- JSON-LD -->
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
-    "@type": "WebPage",
-    "name": "Project Management SaaS Apps & AI Prompts | System & Flow",
-    "url": "https://systemnflow.com/apps.html",
-    "about": {
-      "@type": "Thing",
-      "name": "Project management SaaS apps and AI prompt packs"
-    },
-    "isPartOf": {
-      "@type": "WebSite",
-      "name": "System & Flow",
-      "url": "https://systemnflow.com/"
-    }
+    "@context":"https://schema.org",
+    "@type":"WebPage",
+    "name":"Project Management SaaS Apps & AI Prompts | System & Flow",
+    "url":"https://systemnflow.com/apps.html",
+    "about":{"@type":"Thing","name":"Project management SaaS apps and AI prompt packs"},
+    "isPartOf":{"@type":"WebSite","name":"System & Flow","url":"https://systemnflow.com/"}
   }
   </script>
 
-  <!-- Google tag (gtag.js) -->
+  <!-- GA -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -65,88 +54,149 @@
     gtag('js', new Date());
     gtag('config', 'G-1FRFWG4X18');
   </script>
-</head>
-<body class="dark">
-  <!-- a11y: Skip link -->
-  <a href="#main" class="skip-link">Skip to content</a>
 
-  <!-- Header / Navbar -->
-  <header class="wrap header">
-    <div class="brand">
-      <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" width="28" height="28" />
-        <span class="brand-name">System &amp; Flow</span>
-      </a>
+  <style>
+    /* Page-specific light touches */
+    .apps-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
+    @media (max-width:900px){.apps-grid{grid-template-columns:1fr 1fr}}
+    @media (max-width:560px){.apps-grid{grid-template-columns:1fr}}
+    .card-top{display:flex;align-items:center;justify-content:space-between;margin-bottom:6px}
+    .badge{display:inline-flex;align-items:center;gap:6px;font-size:.8rem;border:1px solid var(--border);padding:4px 8px;border-radius:999px}
+    .badge .dot{width:8px;height:8px;border-radius:50%}
+    .badge.live{background:rgba(64,210,120,.12)}
+    .badge.live .dot{background:#40d278}
+    .badge.soon{background:rgba(184,115,51,.12)} /* copper tint */
+    .badge.soon .dot{background:#b87333}
+    .card-actions{display:flex;gap:10px;margin-top:10px;flex-wrap:wrap}
+  </style>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header">
+    <div class="container">
+      <a class="brand" href="/"><img src="/assets/img/logo.png" alt="System & Flow logo" /></a>
+      <nav aria-label="Primary">
+        <button class="nav-toggle" aria-expanded="false" aria-controls="nav">Menu</button>
+        <ul id="nav" class="nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html" aria-current="page">Apps</a></li>
+          <li><a href="/contact.html" class="button">Contact</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="nav">
-      <a href="/">Home</a>
-      <a href="/apps.html" aria-current="page">Apps</a>
-      <a href="/contact.html">Contact</a>
-    </nav>
   </header>
 
-  <!-- Page intro -->
-  <main id="main" class="wrap hero" style="padding:60px 20px 14px">
-    <h1>SaaS Apps &amp; AI Prompts</h1>
-    <p class="sub">Built by project managers, for project managers. Start with the free Analyzer, then explore premium apps and prompt packs.</p>
+  <main id="main">
+    <!-- Hero -->
+    <section class="hero">
+      <div class="container">
+        <h1>SaaS Apps &amp; AI Prompts</h1>
+        <p class="small" style="max-width:740px">
+          Built by project managers, for project managers. Start with the free Analyzer, then explore premium apps and prompt packs.
+        </p>
+      </div>
+    </section>
+
+    <!-- Cards -->
+    <section class="section">
+      <div class="container apps-grid">
+
+        <!-- Transcript Analyzer (Live) -->
+        <article class="card">
+          <div class="card-top">
+            <h3 style="margin:0">Transcript Analyzer (Free)</h3>
+            <span class="badge live" aria-label="Live"><span class="dot" aria-hidden="true"></span>Live</span>
+          </div>
+          <p class="small">Turn raw meeting notes into <strong>Actions, Risks, and Decisions</strong> in seconds.</p>
+          <div class="card-actions">
+            <a class="button primary" href="#" rel="nofollow" aria-label="Open Transcript Analyzer">Open</a>
+            <a class="button ghost" href="#" rel="nofollow" aria-label="Read documentation for Transcript Analyzer">Docs</a>
+          </div>
+        </article>
+
+        <!-- Status Report Generator (Coming Soon) -->
+        <article class="card">
+          <div class="card-top">
+            <h3 style="margin:0">Status Report Generator</h3>
+            <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span>Coming&nbsp;Soon</span>
+          </div>
+          <p class="small">Create <strong>exec-ready one-pagers</strong> with instant export to PDF or Markdown.</p>
+          <div class="card-actions">
+            <a class="button ghost" href="/contact.html" aria-label="Get notified about Status Report Generator">Get Notified</a>
+          </div>
+        </article>
+
+        <!-- Risk Radar (Coming Soon) -->
+        <article class="card">
+          <div class="card-top">
+            <h3 style="margin:0">Risk Radar</h3>
+            <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span>Coming&nbsp;Soon</span>
+          </div>
+          <p class="small">Automatically flag top project risks — complete with <strong>AI-suggested mitigations</strong>.</p>
+          <div class="card-actions">
+            <a class="button ghost" href="/contact.html" aria-label="Get notified about Risk Radar">Get Notified</a>
+          </div>
+        </article>
+
+        <!-- AI Prompt Pack (Coming Soon) -->
+        <article class="card">
+          <div class="card-top">
+            <h3 style="margin:0">AI Prompt Pack for PMs</h3>
+            <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span>Coming&nbsp;Soon</span>
+          </div>
+          <p class="small">50+ prompts crafted by PMs to supercharge <strong>planning, reporting, and team alignment</strong>.</p>
+          <div class="card-actions">
+            <a class="button ghost" href="/contact.html" aria-label="Get notified about AI Prompt Pack">Get Notified</a>
+          </div>
+        </article>
+
+      </div>
+    </section>
   </main>
 
-  <!-- App cards -->
-  <section class="wrap grid">
-
-    <!-- Transcript Analyzer (Live) -->
-    <div class="card">
-      <div class="card-top">
-        <h3 style="margin:0">Transcript Analyzer (Free)</h3>
-        <span class="badge live" aria-label="Live"><span class="dot" aria-hidden="true"></span> Live</span>
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <img class="footer-logo" src="/assets/img/logo.png" alt="System & Flow" />
+        <p class="small">Project management toolkits & AI prompts.</p>
       </div>
-      <p>Turn raw meeting notes into <strong>Actions, Risks, and Decisions</strong> in seconds.</p>
-      <div class="card-actions">
-        <a class="btn primary" href="#" rel="nofollow" aria-label="Open Transcript Analyzer">Open</a>
-        <a class="btn ghost" href="#" rel="nofollow" aria-label="Read documentation for Transcript Analyzer">Docs</a>
-      </div>
-    </div>
-
-    <!-- Status Report Generator (Coming Soon) -->
-    <div class="card">
-      <div class="card-top">
-        <h3 style="margin:0">Status Report Generator</h3>
-        <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span> Coming&nbsp;Soon</span>
-      </div>
-      <p>Create <strong>exec-ready one-pagers</strong> with instant export to PDF or Markdown.</p>
-      <div class="card-actions">
-        <a class="btn ghost" href="/contact.html" aria-label="Get notified about Status Report Generator">Get Notified</a>
+      <nav aria-label="Footer">
+        <ul class="footer-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Apps</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="https://systemnflow.gumroad.com">Store</a></li>
+        </ul>
+      </nav>
+      <div class="social">
+        <a href="https://www.instagram.com/systemnflow" aria-label="Instagram">@systemnflow</a>
+        <a href="https://www.tiktok.com/@systemnflow" aria-label="TikTok">@systemnflow</a>
+        <a href="https://www.pinterest.com/systemnflow" aria-label="Pinterest">Pinterest</a>
+        <a href="https://www.youtube.com/@Systemnflow" aria-label="YouTube">YouTube</a>
+        <a href="https://www.linkedin.com/company/system-and-flow" aria-label="LinkedIn">LinkedIn</a>
       </div>
     </div>
-
-    <!-- Risk Radar (Coming Soon) -->
-    <div class="card">
-      <div class="card-top">
-        <h3 style="margin:0">Risk Radar</h3>
-        <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span> Coming&nbsp;Soon</span>
-      </div>
-      <p>Automatically flag top project risks — complete with <strong>AI-suggested mitigations</strong>.</p>
-      <div class="card-actions">
-        <a class="btn ghost" href="/contact.html" aria-label="Get notified about Risk Radar">Get Notified</a>
-      </div>
+    <div class="container legal small">
+      © <span id="y"></span> System & Flow™. All rights reserved.
     </div>
+  </footer>
 
-    <!-- AI Prompt Pack (Coming Soon) -->
-    <div class="card">
-      <div class="card-top">
-        <h3 style="margin:0">AI Prompt Pack for PMs</h3>
-        <span class="badge soon" aria-label="Coming soon"><span class="dot" aria-hidden="true"></span> Coming&nbsp;Soon</span>
-      </div>
-      <p>50+ prompts crafted by PMs to supercharge <strong>planning, reporting, and team alignment</strong>.</p>
-      <div class="card-actions">
-        <a class="btn ghost" href="/contact.html" aria-label="Get notified about AI Prompt Pack">Get Notified</a>
-      </div>
-    </div>
+  <script>
+    // year
+    document.getElementById('y').textContent = new Date().getFullYear();
 
-  </section>
-
-  <!-- Footer -->
-  <div data-include="/partials/footer.html"></div>
-  <script src="/include.js" defer></script>
+    // mobile nav
+    const btn = document.querySelector('.nav-toggle');
+    const nav = document.getElementById('nav');
+    if (btn && nav) {
+      btn.addEventListener('click', () => {
+        const open = btn.getAttribute('aria-expanded') === 'true';
+        btn.setAttribute('aria-expanded', String(!open));
+        nav.classList.toggle('open');
+      });
+    }
+  </script>
 </body>
 </html>
