--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Contact System & Flow | Built by PMs, for PMs</title>
   <meta name="description" content="Questions about our PM SaaS apps or AI prompts? Contact System & Flow — built by project managers, for project managers." />
@@ -10,109 +10,173 @@
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
-  <!-- Social -->
+  <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Contact System & Flow | Built by PMs, for PMs" />
   <meta property="og:description" content="Get in touch about lightweight PM SaaS apps and AI prompts that cut through chaos and make execution simple." />
   <meta property="og:url" content="https://systemnflow.com/contact.html" />
   <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
-  <meta property="og:site_name" content="System & Flow" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Contact System & Flow | Built by PMs, for PMs" />
   <meta name="twitter:description" content="Get in touch about lightweight PM SaaS apps and AI prompts that cut through chaos and make execution simple." />
   <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
-  <link rel="preload" href="/styles.css" as="style" />
-  <link rel="stylesheet" href="/styles.css" />
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="manifest" href="/assets/img/site.webmanifest">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
-<!-- Favicons & Touch Icons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-<link rel="manifest" href="/assets/img/site.webmanifest">
-<link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#0b1220">
-<link rel="shortcut icon" href="/assets/img/favicon.ico">
-<meta name="msapplication-TileColor" content="#0b1220">
-<meta name="msapplication-config" content="/assets/img/browserconfig.xml">
-<meta name="theme-color" content="#0b1220">
+  <!-- CSS -->
+  <link rel="preload" href="/assets/css/main.css" as="style" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
 
   <!-- GA -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
-  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-1FRFWG4X18');</script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-1FRFWG4X18');
+  </script>
 
   <style>
+    /* Page-specific light touches */
     .form-wrap{max-width:680px;margin:0 auto;padding:24px 20px}
-    form{background:var(--panel);border:1px solid var(--border);border-radius:16px;padding:18px;display:grid;gap:12px}
-    label{font-size:14px;color:var(--muted)}
-    input, textarea{width:100%;padding:12px;border-radius:10px;border:1px solid var(--border);background:#0f1726;color:var(--ink)}
+    form.contact{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:18px;display:grid;gap:12px}
+    form.contact label{font-size:14px;color:var(--muted);display:grid;gap:6px}
+    form.contact input, form.contact textarea{width:100%;padding:12px;border-radius:10px;border:1px solid var(--border);background:#0f1726;color:var(--ink)}
     .consent{display:flex;gap:10px;align-items:flex-start;color:var(--muted);font-size:14px}
     .success{background:#0f1f14;border:1px solid #1f5d38;color:#c9f1dc;padding:12px;border-radius:10px;margin-top:12px;display:none}
+    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
   </style>
 </head>
-<body class="dark">
-  <header class="wrap header">
-    <div class="brand">
-      <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" width="28" height="28" />
-        <span class="brand-name">System &amp; Flow</span>
-      </a>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header">
+    <div class="container">
+      <a class="brand" href="/"><img src="/assets/img/logo.png" alt="System & Flow logo" /></a>
+      <nav aria-label="Primary">
+        <button class="nav-toggle" aria-expanded="false" aria-controls="nav">Menu</button>
+        <ul id="nav" class="nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Apps</a></li>
+          <li><a href="/contact.html" aria-current="page" class="button">Contact</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="nav">
-      <a href="/">Home</a>
-      <a href="/apps.html">Apps</a>
-      <a href="/contact.html" aria-current="page">Contact</a>
-    </nav>
   </header>
 
-  <main id="main" class="wrap hero" style="padding:60px 20px 14px">
-    <h1>Contact / Join the List</h1>
-    <p class="sub">Built <strong>by project managers, for project managers.</strong> Ask us about SaaS app access, AI prompts, or early launch updates.</p>
+  <main id="main">
+    <!-- Hero -->
+    <section class="hero">
+      <div class="container">
+        <h1>Contact / Join the List</h1>
+        <p class="small" style="max-width:720px">
+          Built <strong>by project managers, for project managers.</strong> Ask us about SaaS app access, AI prompts, or early launch updates.
+        </p>
+      </div>
+    </section>
+
+    <!-- Form -->
+    <section class="section">
+      <div class="container form-wrap">
+        <form id="contact-form" class="contact" action="https://formspree.io/f/mzzvlwqy" method="POST" novalidate>
+          <label for="name">Name
+            <input id="name" type="text" name="name" autocomplete="name" required />
+          </label>
+
+          <label for="email">Email
+            <input id="email" type="email" name="email" autocomplete="email" required />
+          </label>
+
+          <label for="message">Message
+            <textarea id="message" name="message" rows="5" placeholder="How can we help? (e.g., Transcript Analyzer, Status Report Generator, AI Prompt Pack)" required></textarea>
+          </label>
+
+          <div class="consent">
+            <input id="consent" type="checkbox" name="marketing_consent" />
+            <label for="consent">I agree to receive follow-ups about this inquiry and occasional product updates.</label>
+          </div>
+
+          <!-- Honeypot to reduce spam -->
+          <label class="sr-only" for="gotcha">Do not fill this out</label>
+          <input id="gotcha" type="text" name="_gotcha" tabindex="-1" autocomplete="off" class="sr-only" />
+
+          <input type="hidden" name="_subject" value="New contact — systemnflow.com" />
+
+          <button class="button primary" type="submit">Send</button>
+        </form>
+
+        <div id="contact-success" class="success" role="status" aria-live="polite">
+          ✅ Thanks for reaching out! We’ll reply soon.
+        </div>
+      </div>
+    </section>
   </main>
 
-  <section class="wrap form-wrap">
-    <form id="contact-form" action="https://formspree.io/f/mzzvlwqy" method="POST" novalidate>
-      <label for="name">Name
-        <input id="name" type="text" name="name" autocomplete="name" required />
-      </label>
-
-      <label for="email">Email
-        <input id="email" type="email" name="email" autocomplete="email" required />
-      </label>
-
-      <label for="message">Message
-        <textarea id="message" name="message" rows="5" placeholder="How can we help? (e.g., Transcript Analyzer, Status Report Generator, AI Prompt Pack)" required></textarea>
-      </label>
-
-      <label class="consent">
-        <input type="checkbox" name="marketing_consent" />
-        I agree to receive follow‑ups about this inquiry and occasional product updates.
-      </label>
-
-      <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
-      <input type="hidden" name="_subject" value="New contact — systemnflow.com" />
-
-      <button class="btn primary" type="submit">Send</button>
-    </form>
-
-    <div id="contact-success" class="success">✅ Thanks for reaching out! We’ll reply soon.</div>
-  </section>
-
-  <div data-include="/partials/footer.html"></div>
-  <script src="/include.js" defer></script>
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <img class="footer-logo" src="/assets/img/logo.png" alt="System & Flow" />
+        <p class="small">Project management toolkits & AI prompts.</p>
+      </div>
+      <nav aria-label="Footer">
+        <ul class="footer-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Apps</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="https://systemnflow.gumroad.com">Store</a></li>
+        </ul>
+      </nav>
+      <div class="social">
+        <a href="https://www.instagram.com/systemnflow" aria-label="Instagram">@systemnflow</a>
+        <a href="https://www.tiktok.com/@systemnflow" aria-label="TikTok">@systemnflow</a>
+        <a href="https://www.pinterest.com/systemnflow" aria-label="Pinterest">Pinterest</a>
+        <a href="https://www.youtube.com/@Systemnflow" aria-label="YouTube">YouTube</a>
+        <a href="https://www.linkedin.com/company/system-and-flow" aria-label="LinkedIn">LinkedIn</a>
+      </div>
+    </div>
+    <div class="container legal small">
+      © <span id="y"></span> System & Flow™. All rights reserved.
+    </div>
+  </footer>
 
   <script>
-    const cf = document.getElementById("contact-form");
+    // year
+    document.getElementById('y').textContent = new Date().getFullYear();
+
+    // mobile nav
+    const btn = document.querySelector('.nav-toggle');
+    const nav = document.getElementById('nav');
+    if (btn && nav) {
+      btn.addEventListener('click', () => {
+        const open = btn.getAttribute('aria-expanded') === 'true';
+        btn.setAttribute('aria-expanded', String(!open));
+        nav.classList.toggle('open');
+      });
+    }
+
+    // AJAX submit
+    const cf = document.getElementById('contact-form');
+    const success = document.getElementById('contact-success');
     if (cf) {
-      cf.addEventListener("submit", async (e) => {
+      cf.addEventListener('submit', async (e) => {
         e.preventDefault();
-        const data = new FormData(e.target);
-        const resp = await fetch(e.target.action, { method: 'POST', body: data, headers: { 'Accept':'application/json' }});
+        const resp = await fetch(cf.action, {
+          method: 'POST',
+          body: new FormData(cf),
+          headers: { 'Accept': 'application/json' }
+        });
         if (resp.ok) {
-          e.target.style.display = "none";
-          document.getElementById("contact-success").style.display = "block";
+          cf.style.display = 'none';
+          success.style.display = 'block';
           if (typeof gtag === 'function') gtag('event','contact_submit',{method:'Formspree'});
         } else {
-          alert("Oops! Something went wrong. Please try again.");
+          alert('Oops! Something went wrong. Please try again.');
         }
       });
     }
